--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "antd": "^3.23.6",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-router-dom": "^5.1.2",
+    "react-router-native": "^5.1.2",
     "react-scripts": "3.2.0"
   },
   "scripts": {
